# Metal-Game-Engine

./: .gitignore  CMakeLists.txt  Info.plist  InputManager_backup.hpp  export_source.sh  ideas.md  project_source.md  rewrite_renderer.py  run.sh
InputSystem/: AppDelegate.h  AppDelegate.m  Camera..cpp  Camera.hpp  GeometryBuilder.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  MathUtilities.hpp  MetalApplication.cpp  MetalApplication.hpp  MetalCppShim.cpp  MetalCppShim.mm  MyMetalView.h  MyMetalView.mm  Renderer.hpp  Renderer.mm  Shaders.metal  ViewController.h  ViewController.m  codebase_for_claude.txt  main.m
InputSystem.xcodeproj/: project.pbxproj
InputSystem.xcodeproj/xcuserdata/piotr.xcuserdatad/xcschemes/: xcschememanagement.plist
InputSystem/Base.lproj/: Main.storyboard
InputSystem/Core/: Math.hpp  Transform.hpp
InputSystem/Engine/: Camera.hpp
InputSystem/Engine/Application/: Application.hpp
InputSystem/Engine/Core/: Engine.cpp  Engine.hpp  Math.hpp  Time.hpp
InputSystem/Engine/Core/Base/: Config.cpp  Logger.cpp  Logger.hpp  Types.hpp
InputSystem/Engine/Core/Events/: EventSystem.hpp
InputSystem/Engine/Core/Memory/: MemoryManager.cpp  MemoryManager.hpp
InputSystem/Engine/Graphics/: GeometryBuilder.hpp  RenderDevice.hpp  RenderSystem.cpp  RenderSystem.hpp
InputSystem/Engine/Graphics/Metal/: MetalRenderDevice.hpp  MetalRenderDevice.mm
InputSystem/Engine/Scene/: Scene.hpp
MetalEngine/: AppDelegate.h  AppDelegate.m  MetalApplication.hpp  MetalApplication.mm  MetalRenderer.h  MetalRenderer.mm  MyMetalView.h  MyMetalView.mm  Renderer.hpp  Renderer.mm  Shaders.metal  codebase-local.sh  codebase_for_claude.txt
MetalEngine/Engine/: Camera.hpp  Geometry.hpp  Math.hpp  ParticleSystem.hpp  Time.hpp
MetalEngine/Engine/Core/: Time.hpp
MetalEngine/Engine/Graphics/: GeometryBuilder.hpp  RenderDevice.hpp  RenderSystem.cpp  RenderSystem.hpp  VertexLayout.cpp
MetalEngine/Engine/Graphics/Metal/: MetalRenderDevice.hpp  MetalRenderDevice.mm
MetalEngine/Engine/Math/: Math.hpp
MetalEngine/Engine/Scene/: Camera.hpp
